lagde config, begynt på restapi, endret default indentation